fix unintended horizontal scrolling on mobile view

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -132,7 +132,7 @@
 
     .about .about-info{
 
-            padding: 2rem;
+            padding: 0.5rem;
 
             grid-template-areas: 
                 "bio-pic" 
@@ -144,7 +144,7 @@
             grid-template-columns: 1fr;
 
             .card {
-                width: 400px;
+                width: 350px;
             }
     }
 
